--- a/access/css/login.css
+++ b/access/css/login.css
@@ -1,180 +1,259 @@
-.container{
-    display: grid;
-    place-items: center;
-    font-family: arial;
-    width: 100%;
-    flex-wrap: nowrap;
-}
-#logo{
-    -webkit-user-select: none;
-    width: 150px;
-    height: 100%;
-}
-#title{
-    padding-top: 30px;
-    font-size: 14px;
-    font-weight: 770;
-    letter-spacing: 0px;
-}
-table button{
-    -webkit-user-select: none;
-    margin-top: 10px;
-    width: 450px;
-    border-radius: 50px;
-    height: 50px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    cursor: default;
-}
-.errorUser{
-    margin-top: 10px;
-    margin-bottom: 10px;
-    width: 450px;
-    height: 50px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: rgb(216, 44, 44);
-    border-radius: 0;
-    border: 0;
-}
-table button span{
-    font-size: 13px;
-    font-weight: 550;
-    margin-top: 5px;
-    margin-left: 20px;
-    letter-spacing: 1.5px;
-}
-#btnFacebook:hover,#btnGoogle:hover,#btnPhone:hover{
-    border: 1px solid black;
-}
-#btnApple:hover{
-    border: 1px solid rgb(0, 0, 0);
-}
-#btnFacebook{
-    background-color: rgb(93, 108, 166);
-    border: 0;
-    color: rgb(255, 255, 255);
-}
-#btnFacebook img{
-    object-fit: fill;
-    width: 30px;
-    height: 30px;
-    filter:brightness(0) invert(100%) sepia(100%) saturate(100%) hue-rotate(100deg);
-}
-#btnGoogle{
-    background-color: rgb(255, 255, 255);
-    border: 2px solid gray;
-    color: gray;
-}
-#btnGoogle img{
-    object-fit: fill;
-    width: 30px;
-    height: 30px;
-}
-#btnApple{
-    background-color: rgb(0, 0, 0);
-    border: 0;
-    border: 1px solid rgb(133, 133, 133);
-    color: rgb(255, 255, 255);
-}
-#btnApple img{
-    object-fit: fill;
-    width: 30px;
-    height: 30px;
-    filter:brightness(0) invert(100%) sepia(100%) saturate(100%) hue-rotate(100deg);
-}
-#btnPhone{
-    background-color: rgb(255, 255, 255);
-    border: 2px solid gray;
-    color: gray;
-}
-.hr{
-    color: grey;
-    width: 200px;
-    height: 60px;
-}
-#or{
-    padding-top: 5px;
-    text-align: center;
-    width: 50px;
-    height: 60px;
-    font-size: 15px;
-    font-weight: 600;
-}
-.tittle{
-    padding-top: 25px;
-    font-size: 14px;
-    font-weight: 700;
-    cursor: default;
-}
-.textbox{
-    font-size: 14px;
-    padding-left: 15px;
-    width: 100%;
-    height: 45px;
-    border-radius: 5px;
-    border: 2px solid gray;
+*{
+    padding: 0;
+    margin: 0;
     box-sizing: border-box;
+    font-family: 'Montserrat', sans-serif;
 }
-input:hover{
-    border: 2.2px solid rgb(0, 0, 0);
-}
-input[type="checkbox"] {
-    margin: 0px 10px 0px 0px;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-    border-radius: 3px;;
-    width: 14px;
-    height: 14px;
-    border: 1px solid rgb(104, 24, 100);
 
+:root{
+    --main-color-grd: #73169b;
+    --main-color-gr: #73169b;
+    --main-color-bl: #191414;
+    --sub-color-gr:#002114;
+    --main-color-wh: #fff;
+    --rgba-05: rgba(255, 255, 255, 0.5);
+    --rgba-02: rgba(255, 255, 255, 0.2);
+    --rgba-01: rgba(255, 255, 255, 0.1);
 }
-/* input[type="checkbox"]:checked {
-    transition-duration: 0.1s;
-    border: 4px solid green;
-    background-color: rgb(255, 255, 255);
-    background-color: #cccc;
-}*/
-#button{
-    margin-top: -3px;
-    width: 15px;
-    height: 15px;
-    background-color: rgb(149, 18, 134);
-    display: inline-flex;
+
+body{
+    overflow: hidden;
+}
+
+section{
+    display: flex;
     justify-content: center;
     align-items: center;
-    border: 1px solid black;
-    border-radius: 3px;
-}
-input[type="button"]{
-    font-size: 17px;
-    font-weight: 700;
-    width: 170px;
-    height: 55px;
-    border-radius: 50px;
-    border: 0;
-    background-color: rgb(149, 92, 214);
-    transition: all 0.3s;
-}
-input[type="button"]:hover{
-    transform: scale(1.02);
-    cursor: default;
+    min-height: 100vh;
+    background: linear-gradient(to bottom, var(--sub-color-gr), var(--main-color-bl));
 }
 
-#icon{
-    color: grey;
-    transition: all 0.3s ease;
+section .color{
+    position: absolute;
+    filter: blur(150px);
+
 }
-#icon:hover{
-    transform: scale(1.2);
-    color: black;
+
+section .color:nth-child(1){
+    background-color: var(--main-color-gr);
+    height: 400px;
+    width: 600px;
+    top: -350px;
 }
-#pass{
-    color: black;
+
+section .color:nth-child(2){
+    bottom: -150px;
+    left: 100px;
+    width: 300px;
+    height: 500px;
+    background-color: var(--main-color-wh);
 }
-#pass:hover{
-    color: green;
+
+section .color:nth-child(3){
+    bottom: 50px;
+    right: 100px;
+    width: 600px;
+    height: 450px;
+    background-color: var(--main-color-bl);
+}
+
+.style-background{
+    border: 1px solid var(--rgba-05);
+    border-right: 1px solid var(--rgba-02);
+    border-bottom: 1px solid var(--rgba-02);
+    background-color: var(--rgba-01);
+    box-shadow: 0 0 15px var(--rgba-02);
+    backdrop-filter: blur(5px);
+}
+
+.box{
+    position: relative;
+    animation: start 1s ease;
+}
+
+@keyframes start{
+    from{
+        filter: blur(5px);
+        transform: translateY(-200px);
+        opacity: 0.5;
+    }
+    to{
+
+        transform: translateY(0);
+        opacity: 1;
+    }
+}
+
+.box .square{
+    position: absolute;
+    border-radius: 10px;
+    animation: animate 10s linear infinite;
+    animation-delay: calc(-1s * var(--i));
+}
+
+@keyframes animate{
+    0%,100%{
+        transform: translateY(-40px);
+    }
+    50%{
+        transform: translateY(40px);
+    }
+}
+
+.box .square:nth-child(1){
+    top: -50px;
+    right: -60px;
+    width: 100px;
+    height: 100px;
+}
+
+.box .square:nth-child(2){
+    top: 150px;
+    left: -100px;
+    width: 120px;
+    height: 120px;
+    z-index: 2;
+}
+
+.box .square:nth-child(3){
+    bottom: 50px;
+    right: -60px;
+    width: 80px;
+    height: 80px;
+    z-index: 2;
+}
+
+.box .square:nth-child(4){
+    bottom: -60px;
+    left: 100px;
+    width: 50px;
+    height: 50px;
+}
+
+.box .square:nth-child(5){
+    top: -70px;
+    left: 140px;
+    width: 60px;
+    height: 60px;
+}
+
+
+.container{
+    position: relative;
+    width: 400px;
+    min-height: 400px;
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0 0 15px var(--rgba-02);
+}
+
+.form{
+    position: relative;
+    width: 100%;
+    height: 100%;
+    padding: 40px;
+}
+
+.form .logo{
+    display: flex;
+    justify-content: center;
+    margin-bottom: 40px;
+}
+
+.form .input-box{
+    width: 100%;
+    border-radius: 35px;
+    margin-top: 20px;
+}
+
+.form .input-box input, button{
+    position: relative;
+    width: 100%;
+    background-color: var(--rgba-02);
+    border: none;
+    padding: 10px 20px;
+    border-radius: 35px;
+    font-size: 16px;
+    letter-spacing: 1px;
+    color: var(--main-color-wh);
+    caret-color: var(--main-color-gr);
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.05);
+}
+
+.form .input-box #password{
+    padding-right: 40px;
+}
+
+.form .input-box .show-password{
+    position: absolute;
+    right: 11px;
+    top: 10px;
+    opacity: 0.6;
+    color: var(--main-color-wh);
+    cursor: pointer;
+    font-size: 18px;
+}
+
+.form .input-box .show-password:hover{
+    opacity: 1;
+}
+
+.form .input-box span i.hide-password::before{
+    content: '\f070';
+}
+
+.form .input-box input:focus{
+    outline-color: var(--main-color-gr);
+    outline-style: groove;
+}
+
+.form .input-box input::placeholder{
+    color: var(--main-color-wh);
+    opacity: 0.5;
+}
+
+.forget{
+    display: inline-block;
+    text-decoration: none;
+    color: var(--main-color-wh);
+    margin-top: 20px;
+    font-size: 15px;
+}
+
+.forget:hover{
+    color: var(--main-color-gr);
+    text-decoration: underline;
+}
+
+.form .input-box button{
+    background: var(--main-color-grd);
+    color: var(--main-color-bl);
+    max-width: 100px;
+    cursor: pointer;
+    margin-bottom: 20px;
+    font-weight: 600;
+    transform: translateX(218px);
+}
+
+.form .input-box button:hover{
+    color: var(--main-color-wh);
+    background-color: var(--main-color-gr);
+}
+
+.sign-up-box h2{
+    font-size: 18px;
+    text-align: center;
+    color: var(--main-color-wh);
+}
+
+.sign-up-box button{
+    margin-top: 20px;
+    opacity: 0.5;
+}
+
+.sign-up-box button:hover{
+    opacity: 1;
+    cursor: pointer;
 }
